style: Fix spacing between page header footer and main content

--- a/src/app/record/pages/my-orcid/my-orcid.component.scss
+++ b/src/app/record/pages/my-orcid/my-orcid.component.scss
@@ -28,20 +28,7 @@ a.activities {
 }
 
 app-main {
-  padding-bottom: 180px !important;
   max-width: 100%;
-}
-
-app-top-bar.mobile {
-  margin-bottom: 16px;
-}
-
-app-side-bar {
-  margin-bottom: 40px !important;
-}
-
-app-side-bar.mobile {
-  margin-bottom: 32px !important;
 }
 
 app-statistics {
